--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'com.airbnb.android:mvrx:1.5.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
