--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.28'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    implementation "androidx.room:room-runtime:2.2.6"
+    kapt "androidx.room:room-compiler:2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
 }
