--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.6"
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // RxJava support for Room
+    implementation "androidx.room:room-rxjava2:2.2.6"
 }
