--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Roolet">
         <activity
+            android:name=".settings.SettingsActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".contacts.ContactsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
