--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Roolet">
         <activity
             android:name=".settings.aboutus.SettingsActivity2"
-            android:label="@string/title_activity_settings2"></activity>
+            android:label="@string/title_activity_settings2" />
         <activity
             android:name=".settings.SettingsActivity"
             android:configChanges="orientation"
@@ -22,9 +22,13 @@
         <activity
             android:name=".contacts.ContactsActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".groupdetail.GroupDetailActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".settings.aboutus.AboutUsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
