Added rules service for json fetching

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,12 @@ dependencies {
 
     // RxJava support for Room
     implementation "androidx.room:room-rxjava2:2.2.6"
+
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
+
 }
