--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.charlesawoodson.roolet"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 4
         versionName "1.0"
 
@@ -49,14 +49,14 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.1'
     implementation 'com.airbnb.android:mvrx:1.5.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'com.google.dagger:dagger:2.28'
-    kapt 'com.google.dagger:dagger-compiler:2.28'
+    implementation 'com.google.dagger:dagger:2.32'
+    kapt 'com.google.dagger:dagger-compiler:2.32'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
@@ -76,4 +76,6 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
 
+    // Toolbar
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
