--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Roolet">
         <activity
-            android:name=".groupdetail.GroupDetailActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".groups.GroupsActivity"
+            android:name=".RooletActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -28,10 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LauncherActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
