--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,32 +47,42 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Preferences
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
+    // MvRx
     implementation 'androidx.fragment:fragment-ktx:1.3.1'
     implementation 'com.airbnb.android:mvrx:1.5.0'
 
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    // Dagger
     implementation 'com.google.dagger:dagger:2.32'
     kapt 'com.google.dagger:dagger-compiler:2.32'
 
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
+    // Room
     implementation "androidx.room:room-runtime:2.2.6"
     kapt "androidx.room:room-compiler:2.2.6"
     implementation "androidx.room:room-ktx:2.2.6"
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     // RxJava support for Room
     implementation "androidx.room:room-rxjava2:2.2.6"
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
+    // Moshi
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
 
